--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>PassiveModding's REPO</h1>
-<p>PassiveModding</p>
+<p><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://passivemodding.github.io"><div><div><label><p>Add Source via Cydia</p></label></div></div></a></p>
+
 </body>
 </html>
