--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/social-feed-plugin/jquery.socialfeed.css">
+  <link rel="stylesheet" href="assets/social-feed-plugin/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -56,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">free website builder app</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.ws/n">best website maker app</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
 
     
 
@@ -292,15 +295,28 @@
     </div>
 </section>
 
+<section class="mbr-social-feed loading" id="feed-1a" data-facebook="" data-twitter="passivemodding" data-google="" data-posts="10" data-youtube="UCSEd2z_QfxQ_GJpDAAsvs4A" data-rv-view="19" style="background-color: rgb(127, 25, 51); padding-top: 0px; padding-bottom: 0px;">
+    
+    <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
+    <div class="social-feed-container">
+    </div>
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/social-feed-plugin/codebird.min.js"></script>
+  <script src="assets/social-feed-plugin/moment.js"></script>
+  <script src="assets/social-feed-plugin/en-gb.js"></script>
+  <script src="assets/social-feed-plugin/doT.js"></script>
+  <script src="assets/social-feed-plugin/jquery.socialfeed.js"></script>
+  <script src="assets/social-feed-plugin/main.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
