create github pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/kV66TUU">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/tu7ec3C">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
                 </a></div>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">best website maker app</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
 
     
 
@@ -74,7 +74,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Best In Class PS3 Modding Tool</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://rocketr.net/sellers/passivemodding">Purchase</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://discord.gg/kV66TUU">Download</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="https://discord.gg/tu7ec3C">Download</a></div>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
                     <li><strong>Multiple Tools&nbsp;</strong>- Project Passive has Multiple PS3 tools including: BO2 RTM, COD4 RTM, MW2 RTM, BO1 RTM, CID Tester/Generator &amp; More</li>
-                    <li><strong>Personal Support</strong> - Get fast and direct support through our discord, we are very active and are ready to help at any time <a href="https://discord.gg/kV66TUU" target="_blank">https://discord.gg/kV66TUU</a></li>
+                    <li><strong>Personal Support</strong> - Get fast and direct support through our discord, we are very active and are ready to help at any time <a href="https://discord.gg/tu7ec3C" target="_blank">https://discord.gg/tu7ec3C</a></li>
                     <li><strong>Always Adding Features</strong> - Project Passive is always being updated with more features for you to use, we try to provide weekly/fortnightly updates for all.</li>
                 </ol>
             </div>
