--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/kV66TUU">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/tu7ec3C">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
                 </a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">how to build your own website</a></section><section class="header1 cid-qMDV4Jjxx7" id="header1-q">
+<section class="engine"><a href="https://mobirise.ws/b">best free site creator</a></section><section class="header1 cid-qMDV4Jjxx7" id="header1-q">
 
     
 
