--- a/page3.html
+++ b/page3.html
@@ -48,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/kV66TUU">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/tu7ec3C">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
                 </a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="features13 cid-qMDZwgZFzk" id="features13-11">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="features13 cid-qMDZwgZFzk" id="features13-11">
 
     
 
