--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/kV66TUU">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/tu7ec3C">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
                 </a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple web creator</a></section><section class="mbr-section content5 cid-qMDZ72UdIl mbr-parallax-background" id="content5-y">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="mbr-section content5 cid-qMDZ72UdIl mbr-parallax-background" id="content5-y">
 
     
 
