--- a/page3.html
+++ b/page3.html
@@ -47,7 +47,9 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://discord.gg/tu7ec3C" target="_blank"><span style="font-size: 25.6px;">Discord</span><font face="MobiriseIcons"></font></a>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://discord.gg/tu7ec3C">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
@@ -56,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="features13 cid-qMDZwgZFzk" id="features13-11">
+<section class="engine"><a href="https://mobirise.ws/q">website builder download</a></section><section class="features13 cid-qMDZwgZFzk" id="features13-11">
 
     
 
