create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header1 cid-qMDV4Jjxx7" id="header1-q">
+<section class="engine"><a href="https://mobirise.ws/i">build free website</a></section><section class="header1 cid-qMDV4Jjxx7" id="header1-q">
 
     
 
