--- a/page13.html
+++ b/page13.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="header10 cid-qO1tX0A5j9 mbr-fullscreen mbr-parallax-background" id="header10-2f">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header10 cid-qO1tX0A5j9 mbr-fullscreen mbr-parallax-background" id="header10-2f">
 
     
 
@@ -196,6 +196,20 @@
             </div>
         </div> 
     </div>          
+</section>
+
+<section class="mbr-section content8 cid-qO92aqpv4C" id="content8-2o">
+
+    
+
+    <div class="container">
+        <div class="media-container-row title">
+            <div class="col-12 col-md-8">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="page14.html">Update Timeline</a>
+                    <a class="btn btn-black-outline display-4" href="https://discord.gg/tu7ec3C">Support Discord</a></div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
