--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://discord.gg/tu7ec3C" target="_blank"><span style="font-size: 25.6px;">Discord</span><font face="MobiriseIcons"></font></a>
+                    <a class="nav-link link text-white display-4" href="https://passivenation.com/Forum-Project-Passive" target="_blank"><span style="font-size: 25.6px;">Support</span><font face="MobiriseIcons"></font></a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page13.html">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.ws/q">web page maker download</a></section><section class="cid-qMBf8sYVeD mbr-fullscreen mbr-parallax-background" id="header2-f">
 
     
 
@@ -95,7 +95,7 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
                     <li><strong>Multiple Tools&nbsp;</strong>- Project Passive has Multiple PS3 tools including: BO2 RTM, COD4 RTM, MW2 RTM, BO1 RTM, CID Tester/Generator &amp; More</li>
-                    <li><strong>Personal Support</strong> - Get fast and direct support through our discord, we are very active and are ready to help at any time <a href="https://discord.gg/tu7ec3C" target="_blank">https://discord.gg/tu7ec3C</a></li>
+                    <li><strong>Personal Support</strong> - Get fast and direct support through our forums, we are very active and are ready to help at any time <a href="https://passivenation.com/Forum-Project-Passive" target="_blank">https://passivenation.com/Forum-Project-Passive</a></li>
                     <li><strong>Always Adding Features</strong> - Project Passive is always being updated with more features for you to use, we try to provide weekly/fortnightly updates for all.</li>
                 </ol>
             </div>
@@ -447,7 +447,7 @@
 
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  170</h3>
+                                  170+</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Members</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
@@ -464,7 +464,7 @@
                         </div>
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  50</h3>
+                                  50+</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Users</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
@@ -480,7 +480,7 @@
                         </div>
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
-                                  10</h3>
+                                  10+</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Tools</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
@@ -626,7 +626,7 @@
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1a" data-facebook="" data-twitter="passivemodding" data-google="" data-posts="10" data-youtube="UCSEd2z_QfxQ_GJpDAAsvs4A" data-rv-view="17" style="background-color: rgb(127, 25, 51); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1a" data-facebook="" data-twitter="passivemodding" data-google="" data-posts="10" data-youtube="UCSEd2z_QfxQ_GJpDAAsvs4A" data-rv-view="33" style="background-color: rgb(127, 25, 51); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
