--- a/page12.html
+++ b/page12.html
@@ -48,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://discord.gg/tu7ec3C" target="_blank"><span style="font-size: 25.6px;">Discord</span><font face="MobiriseIcons"></font></a>
+                    <a class="nav-link link text-white display-4" href="https://passivenation.com/Forum-Project-Passive" target="_blank"><span style="font-size: 25.6px;">Support</span><font face="MobiriseIcons"></font></a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page13.html">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build free website</a></section><section class="features11 cid-qNYb87J5RJ" id="features11-2b">
+<section class="engine"><a href="https://mobirise.ws/l">html web builder</a></section><section class="features11 cid-qNYb87J5RJ" id="features11-2b">
 
     
 
