--- a/page13.html
+++ b/page13.html
@@ -48,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://discord.gg/tu7ec3C" target="_blank"><span style="font-size: 25.6px;">Discord</span><font face="MobiriseIcons"></font></a>
+                    <a class="nav-link link text-white display-4" href="https://passivenation.com/Forum-Project-Passive" target="_blank"><span style="font-size: 25.6px;">Support</span><font face="MobiriseIcons"></font></a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page13.html">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header10 cid-qO1tX0A5j9 mbr-fullscreen mbr-parallax-background" id="header10-2f">
+<section class="engine"><a href="https://mobirise.ws/n">free website creator app</a></section><section class="header10 cid-qO1tX0A5j9 mbr-fullscreen mbr-parallax-background" id="header10-2f">
 
     
 
@@ -85,7 +85,7 @@
 <br>-<a href="page12.html">Chat Spammer</a> (Mass send messages to people on skype, discord or other platforms, custom intervals etc.)
 <br>-<a href="page11.html">Instagram Availability Tool</a> (Check Whether Accounts are available or not.)</p>
             <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="http://links.passivenation.com/9">Download</a>
-                <a class="btn btn-md btn-white-outline display-4" href="https://discord.gg/tu7ec3C">Support</a></div>
+                <a class="btn btn-md btn-white-outline display-4" href="https://passivenation.com/Forum-Project-Passive">Support</a></div>
         </div>
     </div>
 
@@ -206,7 +206,7 @@
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="page14.html">Update Timeline</a>
-                    <a class="btn btn-black-outline display-4" href="https://discord.gg/tu7ec3C">Support Discord</a></div>
+                    <a class="btn btn-black-outline display-4" href="https://passivenation.com/Forum-Project-Passive">Support Discord</a></div>
             </div>
         </div>
     </div>
